# wishlist_couple_bot

./: .gitignore  Dockerfile  docker-compose.dev.yaml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
app/: bot.py  providers.py
app/dao/: dao.py  enums.py  schemas.py
app/handlers/: common.py
app/kb/: __init__.py  buttons.py  product_enter_kb.py
app/states/: states.py
app/texts/: texts.py
app/utils/: db.py  parsing.py
config/: config.py  settings.toml
