[project]
name = "wishlist-couple-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "asyncio>=4.0.0",
    "dynaconf>=3.2.12",
    "pydantic>=2.11.10",
    "pytest-playwright>=0.7.1",
    "sqlalchemy>=2.0.44",
]
